<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CageInfoActivity">

    <TextView
        android:id="@+id/cage_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:text="roro's cage"
        android:layout_marginTop="18dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_back"/>

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/description_btn_back"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cage_name" />

    <ImageView
        android:id="@+id/photo_profile"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cage_name"
        app:srcCompat="@drawable/btnlizardxml" />

    <ImageButton
        android:id="@+id/btn_edit_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:minHeight="48dp"
        android:src="@drawable/ic_edit_info"
        android:contentDescription="@string/describe"
        app:layout_constraintBottom_toTopOf="@id/container_profile"
        app:layout_constraintEnd_toEndOf="@id/container_profile" />

    <LinearLayout
        android:id="@+id/container_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/photo_profile"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="90dp"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="name: roro"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="gender: fm"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="age: 2 years"
            android:layout_marginBottom="8dp"/>

        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_gray"
            android:text="@string/recent_photos"
            android:backgroundTint="@color/btn_photo"/>
    </LinearLayout>

    <TextView
        android:id="@+id/text_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/cage_condition_en"
        app:layout_constraintStart_toStartOf="@id/photo_profile"
        app:layout_constraintTop_toBottomOf="@id/photo_profile"
        android:layout_marginTop="40dp"/>

    <ImageButton
        android:id="@+id/btn_move_sensor"
        android:contentDescription="@string/describe"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        android:src="@drawable/ic_detail"
        app:layout_constraintBottom_toTopOf="@+id/container_condition"
        app:layout_constraintEnd_toEndOf="@id/container_condition" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_condition"
        android:layout_width="0dp"
        android:layout_height="190dp"
        android:background="@color/container_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_condition"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="15dp">

        <TextView
            android:id="@+id/text_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/temperature"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="20dp"/>

        <TextView
            android:id="@+id/result_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:text="10 ℃"
            app:layout_constraintStart_toEndOf="@id/text_temp"
            app:layout_constraintBottom_toBottomOf="@id/text_temp"
            android:layout_marginStart="15dp"/>

        <TextView
            android:id="@+id/opt_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="최적: 5℃"
            app:layout_constraintStart_toEndOf="@id/result_temp"
            app:layout_constraintBottom_toBottomOf="@id/text_temp"
            android:layout_marginStart="15dp"/>

        <TextView
            android:id="@+id/text_hum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/humidity"
            app:layout_constraintStart_toStartOf="@id/text_temp"
            app:layout_constraintTop_toBottomOf="@id/text_temp"
            android:layout_marginVertical="20dp" />

        <TextView
            android:id="@+id/result_hum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:text="60％"
            app:layout_constraintBottom_toBottomOf="@id/text_hum"
            app:layout_constraintStart_toEndOf="@id/text_hum"
            android:layout_marginStart="15dp"/>

        <TextView
            android:id="@+id/opt_hum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="최적: 60％"
            app:layout_constraintStart_toEndOf="@id/result_hum"
            app:layout_constraintBottom_toBottomOf="@id/result_hum"
            android:layout_marginStart="15dp"/>


        <TextView
            android:id="@+id/text_lig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/light"
            app:layout_constraintStart_toStartOf="@id/text_temp"
            app:layout_constraintTop_toBottomOf="@id/text_hum"
            android:layout_marginVertical="20dp"/>

        <TextView
            android:id="@+id/result_lig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:text="OFF"
            app:layout_constraintBottom_toBottomOf="@id/text_lig"
            app:layout_constraintStart_toEndOf="@id/text_lig"
            android:layout_marginStart="15dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_update_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="OnClick"
        android:textColor="@color/black"
        android:text="@string/update"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="@id/container_condition"
        app:layout_constraintTop_toBottomOf="@id/container_condition" />

    <TextView
        android:id="@+id/text_uniqueness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/uniqueness"
        app:layout_constraintStart_toStartOf="@id/text_condition"
        app:layout_constraintTop_toBottomOf="@id/btn_update_val"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/container_gray"
        android:textSize="25sp"
        android:text="roro는 귀엽다."
        app:layout_constraintTop_toBottomOf="@+id/text_uniqueness"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="30dp"
        android:paddingVertical="8dp"
        android:paddingHorizontal="20dp"
        android:layout_marginVertical="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>