<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SensorActivity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_back"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toTopOf="@+id/page_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/description_btn_back"/>

    <TextView
        android:id="@+id/page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:text="roro's cage 센서"
        android:layout_marginTop="18dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_back"/>

    <TextView
        android:id="@+id/text_graph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/graph"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/spinner_sensor"
        app:layout_constraintTop_toBottomOf="@id/page_title"
        android:layout_marginTop="20dp"/>

    <Spinner
        android:id="@+id/spinner_sensor"
        android:layout_width="200dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@id/text_graph"
        app:layout_constraintStart_toEndOf="@id/text_graph"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/spinner_sensor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/savebutton"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp">

        <LinearLayout
            android:id="@+id/container_layout_temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img_graph"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/no_selected_data"
                app:layout_constraintTop_toBottomOf="@id/text_graph"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/text_ctl_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/ctl_temp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="20dp"/>

                <ImageView
                    android:id="@+id/img_temp"
                    android:layout_width="110dp"
                    android:layout_height="90dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/ic_thermostat"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_ctl_temp" />

                <TextView
                    android:id="@+id/recommend_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="추천: 12 ℃"
                    app:layout_constraintTop_toBottomOf="@id/img_temp"
                    app:layout_constraintStart_toStartOf="@id/img_temp"
                    app:layout_constraintEnd_toEndOf="@id/img_temp"/>

                <TextView
                    android:id="@+id/text_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="🔸설정 온도: "
                    app:layout_constraintStart_toEndOf="@id/img_temp"
                    app:layout_constraintTop_toTopOf="@id/img_temp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="9dp"/>

                <EditText
                    android:id="@+id/edit_text_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:text="12"
                    app:layout_constraintStart_toEndOf="@id/text_temp"
                    app:layout_constraintBottom_toBottomOf="@id/text_temp"
                    android:padding="0dp"
                    android:layout_marginHorizontal="4dp"/>

                <TextView
                    android:id="@+id/text_op1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="℃"
                    app:layout_constraintStart_toEndOf="@id/edit_text_temp"
                    app:layout_constraintBottom_toBottomOf="@id/edit_text_temp"
                    android:layout_marginStart="4dp" />

                <TextView
                    android:id="@+id/text_range_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="🔸적정 범위: "
                    app:layout_constraintStart_toStartOf="@id/text_temp"
                    app:layout_constraintTop_toBottomOf="@id/text_temp"
                    android:layout_marginTop="8dp" />

                <EditText
                    android:id="@+id/edit_range_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:text="9℃-15℃"
                    app:layout_constraintStart_toEndOf="@id/text_range_temp"
                    app:layout_constraintBottom_toBottomOf="@id/text_range_temp"
                    android:padding="0dp"
                    android:layout_marginHorizontal="4dp"/>

                <TextView
                    android:id="@+id/des_range"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="🔔 적정 범위를 벗어날 경우 알림"
                    app:layout_constraintStart_toStartOf="@id/text_temp"
                    app:layout_constraintTop_toBottomOf="@id/text_range_temp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="15dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/text_ctl_hum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/ctl_hum"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="20dp"/>

                <EditText
                    android:id="@+id/edit_text_hum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:text="60"
                    app:layout_constraintStart_toEndOf="@id/text_hum"
                    app:layout_constraintBottom_toBottomOf="@id/text_hum"
                    android:padding="0dp"
                    android:layout_marginHorizontal="4dp"/>

                <TextView
                    android:id="@+id/text_hum_op"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="%"
                    app:layout_constraintStart_toEndOf="@id/edit_text_hum"
                    app:layout_constraintBottom_toBottomOf="@id/edit_text_hum"
                    android:layout_marginStart="4dp" />

                <ImageView
                    android:id="@+id/img_hum"
                    android:layout_width="110dp"
                    android:layout_height="90dp"
                    android:src="@drawable/ic_hum"
                    app:layout_constraintTop_toBottomOf="@id/text_ctl_hum"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="25dp"/>

                <TextView
                    android:id="@+id/text_hum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="9dp"
                    android:layout_marginTop="8dp"
                    android:text="🔸설정 습도: "
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@id/img_hum"
                    app:layout_constraintTop_toTopOf="@id/img_hum" />

                <TextView
                    android:id="@+id/text_hum_op1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="%"
                    app:layout_constraintStart_toEndOf="@id/edit_text_hum"
                    app:layout_constraintBottom_toBottomOf="@id/edit_text_hum"
                    android:layout_marginStart="4dp" />

                <TextView
                    android:id="@+id/recommend_hum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="추천: 70%"
                    app:layout_constraintTop_toBottomOf="@id/img_hum"
                    app:layout_constraintStart_toStartOf="@id/img_hum"
                    app:layout_constraintEnd_toEndOf="@id/img_hum"/>

                <TextView
                    android:id="@+id/des_range_hum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="🔔 적정 범위를 벗어날 경우 알림"
                    app:layout_constraintStart_toStartOf="@id/text_hum"
                    app:layout_constraintTop_toBottomOf="@id/text_hum"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="15dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/text_ctl_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/ctl_light"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="20dp"/>

                <ImageView
                    android:id="@+id/img_light"
                    android:layout_width="110dp"
                    android:layout_height="90dp"
                    android:src="@drawable/ic_sunny"
                    app:layout_constraintTop_toBottomOf="@id/text_ctl_light"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="25dp"/>

                <TextView
                    android:id="@+id/text_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="9dp"
                    android:layout_marginTop="8dp"
                    android:text="🔸설정 조도: "
                    android:textSize="22sp"
                    app:layout_constraintStart_toEndOf="@id/img_light"
                    app:layout_constraintTop_toTopOf="@id/img_light" />

                <EditText
                    android:id="@+id/edit_text_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:text="9000"
                    app:layout_constraintStart_toEndOf="@id/text_light"
                    app:layout_constraintBottom_toBottomOf="@id/text_light"
                    android:padding="0dp"
                    android:layout_marginHorizontal="4dp"/>

                <TextView
                    android:id="@+id/text_lightop1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="lx"
                    app:layout_constraintStart_toEndOf="@id/edit_text_light"
                    app:layout_constraintBottom_toBottomOf="@id/edit_text_light"
                    android:layout_marginStart="4dp" />

                <TextView
                    android:id="@+id/text_light_op1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="lx"
                    app:layout_constraintStart_toEndOf="@id/edit_text_light"
                    app:layout_constraintBottom_toBottomOf="@id/edit_text_light"
                    android:layout_marginStart="4dp" />

                <TextView
                    android:id="@+id/recommend_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="추천: 4500lx"
                    app:layout_constraintTop_toBottomOf="@id/img_light"
                    app:layout_constraintStart_toStartOf="@id/img_light"
                    app:layout_constraintEnd_toEndOf="@id/img_light"/>

                <TextView
                    android:id="@+id/des_range_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="🔔 적정 범위를 벗어날 경우 알림"
                    app:layout_constraintStart_toStartOf="@id/text_light"
                    app:layout_constraintTop_toBottomOf="@id/text_light"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="15dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/savebutton"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:backgroundTint="@color/btn_green"
        android:text="저장"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>